--- a/style/style.css
+++ b/style/style.css
@@ -92,7 +92,10 @@ input::-webkit-inner-spin-button{
     width: 300px;
     height: 400px;
     background-color: white;
-    display: flex;
+    display: grid;
+
+    grid-template-columns: 100px 100px;
+    grid-template-rows: 110px 110px 110px;
     gap: 10px;
     padding: 8px;
 }
@@ -115,28 +118,28 @@ input::-webkit-inner-spin-button{
     height: 110px;
     background-color: green;
     color: rgb(255, 255, 255);
-    display: grid;
+    /* display: grid; */
     /* position: absolute; */
     /* font-size: 48px; */
     font-family: Arial, Helvetica, sans-serif;
 
     text-align: center;
     
-    right: 350px;
+    /* right: 350px; */
 }
 
 .N{
     width: 65px;
     height: 65px;
     background-color: white;
-    position: absolute;
+    position: relative;
     font-size: 48px;
     margin: 18px;
-    margin-top: 38px;
+    margin-top: -10px;
     color: rgb(0, 82, 0);
 }
 .N h1{
-    position: relative;
+    position: absolute;
     top: -35px;
     font-size: 54px;
 }
@@ -147,24 +150,54 @@ input::-webkit-inner-spin-button{
     height: 110px;
     background-color: green;
     color: rgb(255, 255, 255);
-    display: grid;
+    /* display: grid; */
     /* position: absolute; */
     /* font-size: 48px; */
     font-family: Arial, Helvetica, sans-serif;
 
     text-align: center;
     
-    right: 350px;
+    /* right: 350px; */
 }
 
 .N2{
     width: 110px;
     height: 65px;
     background-color: white;
-    position: absolute;
+    /* position: absolute; */
     font-size: 48px;
     margin: 18px;
-    margin-top: 38px;
+    margin-top: -10px;
+}
+
+.ganhou{
+    width: 150px;
+    height: 110px;
+    background-color: green;
+    color: rgb(255, 255, 255);
+    /* display: grid; */
+    /* position: absolute; */
+    /* font-size: 48px; */
+    font-family: Arial, Helvetica, sans-serif;
+
+    text-align: center;
+    
+    /* right: 350px; */
+}
+
+.N3{
+    width: 110px;
+    height: 65px;
+    background-color: white;
+    /* position: absolute; */
+    font-size: 48px;
+    margin: 18px;
+    margin-top: -10px;
+}
+
+#displayGanhou{
+    font-size: 16px;
+    color: black;
 }
 
 .bateu{
@@ -191,5 +224,13 @@ input::-webkit-inner-spin-button{
     top: 20%;
     font-size: 46px;
     cursor: pointer;
+    /* width: 100%; */
 }
 
+#cb{
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    top: 200px;
+    right: 100px;
+}
